<resources>
    <string name="app_name">Board game players finder</string>
    <string name="my_messages">my messages</string>
    <string name="find_game_to_play">Find game to play</string>
    <string name="game_name">Game name:</string>
    <string name="place_to_play">Place to play</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>

    <string name="please_enter_the_name_of_the_game">Please enter the name of the game</string>
    <string name="please_enter_the_required_number_of_the_players">Please enter the required number of players</string>
    <string name="please_enter_the_address_where_the_event_will_take_place">Please enter the address where the event will take place</string>
    <string name="email_address_and_password_must_be_entered">Email address and password must be entered</string>
    <string name="please_enter_date">Please enter date</string>
    <string name="please_enter_time">Please enter time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="list_of_games">List of games</string>
    <string name="sign_out">Sign out</string>
    <string name="register_with_email">Register with email</string>
    <string name="login_with_email">Login with email</string>
    <string name="log_out">Log out</string>
    <string name="hello">Hello</string>
    <string name="nearby_events">Nearby events:</string>
    <string name="my_events">My events:</string>
    <string name="players_available">Players available</string>
    <string name="maximum_number_of_players">Maximum number of players</string>
    <string name="create_game_event">Create game event</string>
    <string name="location">Location</string>
    <string name="description">Description:</string>
    <string name="place_to_play_address">Place to play address:</string>
    <string name="number_of_players">Number of players:</string>
    <string name="event_address">Event address:</string>
    <string name="send_a_request">Send a request</string>
    <string name="comments_on_request_submission">Comments on request submission</string>
    <string name="apply">Apply</string>
    <string name="the_maximum_number_of_players_in_this_event_has_been_reached">The maximum number of players in this event has been reached</string>
    <string name="joined_players">Joined players</string>
    <string name="player_email">Player email:</string>
    <string name="delete_player">delete player</string>
    <string name="please_enter_the_correct_number_of_players">Please enter the correct number of players</string>

</resources>