<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLogOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/hello" />


    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <ImageButton-->
    <!--        android:id="@+id/button_my_messages"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="12dp"-->
    <!--        android:background="@color/white"-->
    <!--        android:contentDescription="@string/my_messages"-->
    <!--        android:src="@drawable/ic_baseline_message_24"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/tvNearbyEvents"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/tvNearbyEvents"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:text="@string/nearby_events"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/buttonLogOut" />-->

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/recyclerViewNearbyGames"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="300dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/tvNearbyEvents" />-->

    <TextView
        android:id="@+id/tvMyEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_events"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogOut" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMyGames"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@id/buttonFindGameToPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMyEvents" />

    <Button
        android:id="@+id/buttonFindGameToPlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/find_game_to_play"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCreateGameEvent" />

    <Button
        android:id="@+id/buttonCreateGameEvent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elegantTextHeight="false"
        android:text="@string/create_game_event"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonFindGameToPlay"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>